# HeaterController

./: .gitignore  README.md  ScreenTest.py
Hardware/: 3D_Print_Box v3.3mf  3D_Print_Box v3.stl  3D_Print_Box v3_0.2mm_PLA_MK3S_5h16m.gcode  3D_Print_Box v5.3mf  3D_Print_Box v5.stl  3D_Print_Box v5_0.2mm_PLA_MK3S_4h59m.gcode  Backplate.3mf  Backplate.stl  Backplate_0.3mm_PLA_MK3S_1h20m.gcode  Case v5.f3d  Case v8.3mf  Case v8_0.1mm_PLA_MK3S_15h47m.3mf  Case v8_0.2mm_PLA_MK3S_6h13m.3mf  Case v8_0.2mm_PLA_MK3S_6h13m.gcode  Case v8_0.3mm_PLA_MK3S_4h48m.3mf  Case v8_0.3mm_PLA_MK3S_4h48m.gcode  Front.3mf  Front.stl  UMS5_Case v11_Platte.ufp
Software/RPi/: CMakeLists.txt  Driver.py  HeatingPeriode  HeatingScheduler.py  ScreenController.py  build.sh  main.py
Software/RPi/src/: main.cpp  spi.cpp  spi.h
Software/RPi/src/Models/: HeatingTimeslot.cpp  HeatingTimeslot.h  TimeOfDay.cpp  TimeOfDay.h  WeekSchedule.cpp  WeekSchedule.h
